--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "^6.0.1",
     "@angular/platform-browser-dynamic": "^6.0.1",
     "@angular/router": "^6.0.1",
-    "bootstrap": "^3.3.7",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
     "rxjs": "^6.1.0",
+    "sass": "^1.24.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
