--- a/angular.json
+++ b/angular.json
@@ -78,8 +78,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/scss/bootstrap.scss"
+              "src/styles.css"
             ],
             "scripts": [],
             "assets": [
