--- a/angular.json
+++ b/angular.json
@@ -78,7 +78,8 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootswatch/dist/solar/bootstrap.min.css"
             ],
             "scripts": [],
             "assets": [
