--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,7 @@
               "src/styles.scss"
             ],
             "scripts": [
-        
+              "node_modules/hammerjs/hammer.min.js"
             ]
           },
           "configurations": {
