--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
-    "font-awesome": "^4.7.0",
     "angular-material": "^1.1.20",
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
     "core-js": "^2.6.11",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.5.4",
     "sass": "^1.24.0",
