--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.5.4",
-    "sass": "^1.24.0",
+    "sass": "^1.24.2",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
@@ -42,7 +42,7 @@
     "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~13.1.1",
+    "@types/node": "^13.1.4",
     "codelyzer": "~5.2.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
