--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "@angular/router": "^8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "@ngrx/effects": "^8.6.0",
+    "@ngrx/entity": "^8.6.0",
+    "@ngrx/router-store": "^8.6.0",
+    "@ngrx/store": "^8.6.0",
+    "@ngrx/store-devtools": "^8.6.0",
     "angular-material": "^1.1.20",
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
